--- a/src/main/resources/templates/client_consumption.html
+++ b/src/main/resources/templates/client_consumption.html
@@ -53,7 +53,7 @@
                                 <i class="fa fa-edit" aria-hidden="true"></i>&nbsp;&nbsp;
                                 修改
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger" onclick="delete_client_info()">
                                 <i class="fa fa-trash" aria-hidden="true"></i>&nbsp;&nbsp;
                                 删除
                             </button>
@@ -318,19 +318,37 @@
                 alert("操作失败，请检查输入数据格式");
             },
             success: function(data) {
-                alert(data);
+                alert("成功");
                 $("#close_model").click();
+                location.reload();
             }
         });
     }
 
-    /**
-     * Due to how HTML5 defines its semantics, the autofocus HTML attribute has no effect in Bootstrap modals.
-     * To achieve the same effect, use some custom JavaScript:
-     */
-    // $('#clientModel').on('shown.bs.modal', function () {
-    //   $('#myInput').focus()
-    // })
+    function delete_client_info() {
+        var ths = $("#example1>tbody").find("tr.focus").find("td"); //找出表格中被选中行的所有列
+        if (ths.length===0){
+            alert("请先选中一条客户基本信息记录");
+            return;
+        }
+        $.ajax({
+            type: "POST",
+            url: "/deleteClientConsumeInfo",
+            data: {"clientId": ths[0].innerText},
+            async: true,
+            error: function(request) {
+                alert("Connection error");
+            },
+            success: function(data) {
+                //接收后台返回的结果
+                if (data){
+                    alert("成功");
+                    $("#close_model").click();
+                    location.reload();
+                }
+            }
+        });
+    }
 </script>
 </body>
 
