--- a/src/main/resources/templates/value_calculating.html
+++ b/src/main/resources/templates/value_calculating.html
@@ -39,8 +39,8 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active">Advanced Form</li>
+                            <li class="breadcrumb-item"><a href="/">首页</a></li>
+                            <li class="breadcrumb-item active">客户价值计算</li>
                         </ol>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                                 <div class="card-body box-profile">
                                     <div class="text-center">
                                         <img class="profile-user-img img-fluid img-circle"
-                                             th:src="${clientValuePageInfo.sex}?'dist/img/user8-128x128.jpg':'dist/img/user4-128x128.jpg'"
+                                             th:src="${clientValuePageInfo.sex}?'dist/img/user8-128x128.jpg':'dist/img/user7-128x128.jpg'"
                                              alt="User profile picture">
                                     </div>
 
