--- a/src/main/resources/templates/satisfaction_calculating.html
+++ b/src/main/resources/templates/satisfaction_calculating.html
@@ -39,8 +39,8 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active">Advanced Form</li>
+                            <li class="breadcrumb-item"><a href="/">首页</a></li>
+                            <li class="breadcrumb-item active">客户满意度录入</li>
                         </ol>
                     </div>
                 </div>
